--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <hr>
   <h3><a href="Hobbies.html"><strong>Hobbies</strong></a></h3>
   <hr>
-  <h3><a href="contact.html"> <strong>Contact me</strong></a></h3>
+  <h3><a href="Contact.html"> <strong>Contact me</strong></a></h3>
   <hr>
   <h3><strong>Career</strong></h3>
   <table>
